[package]
name = "better-finder-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
colored = "2.1.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
